<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_home"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_about_app"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_about_app_text"
                    android:textAllCaps="false"
                    android:textSize="17dp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_whom_is_this_app_directed"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_whom_is_this_app_directed_text"
                    android:textAllCaps="false"
                    android:textSize="17dp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_polic_app"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_polic_app_text"
                    android:textAllCaps="false"
                    android:textSize="17dp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use_text"
                    android:textAllCaps="false"
                    android:textSize="17dp"
                    android:textStyle="normal"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use_of_free"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use_of_free_text"
                    android:textAllCaps="false"
                    android:textSize="17dp"
                    android:textStyle="normal"/>

                <CheckBox
                    android:id="@+id/checkBox_agree_to_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Agree to terms" />

                <Button
                    android:id="@+id/agree_to_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg_transparent"
                    android:textAllCaps="false"
                    android:text="Agree" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>